# qt-visualization

./: .gitignore  CMakeLists.txt  qt-visualization.pro
src/: CMakeLists.txt  app.cpp  app.h  main.cpp  serial.cpp  serial.h
src/charts/: abs_view.cpp  abs_view.h  amplitudes.cpp  amplitudes.h  samples.cpp  samples.h
